Version 2.2.5, released December xxth, 2002
===========================================

- Improved speed for sending many email notifications
- Added "Omit email to" option

Version 2.2.4, released December 12th, 2002
===========================================

- Added option "Menu text = xxxx" and "Find Menu text = xxxx"
- Fixed bug with "hosts allow = .."
- Fixed problem that when hitting "Back" after a wrong message submission
  old text was gone
- Fixed bug with displaying attributes in search all logbooks
- Added strlcpy and strlcat to avoid buffer overflows
- Implemented "Line as link" option
- Implemented collapse/expand of threaded display
- Do not display password in URL if wrong password
- Added "Quick filter" option

Version 2.2.3, released Nobember 20th, 2002
===========================================

- Added "charset = ..." option
- Fixed bug with 10 attachments
- Added "Table align = ..." option
- Create data directory automatically
- Allow substitutions in attributes for searches, like "Author=$full_name"

Version 2.2.2, released Nobember 6th, 2002
==========================================

- "Select" command now works in non-english installations
- Made self registration work with global password file
- Fixed bugs when "Start page = ..." was present
- Added "Message height = ..." option
- Mail notification now distinguishes between new entry and updated entry
- Made "Allow <command> = <user>" work in localized versions
- Move whole thread when individual message is re-submitted
- Do not display commands which are not allowed for the current user
- All text files (preset text, welcome page, ...) can specified with an
  absolute path if they start with "/" (or "\" under Windows)

Version 2.2.1, released October 15th, 2002
==========================================

- elog program can now handle large attachments
- find result in threaded mode does not display messages multiple times

Version 2.2.0, released September 25th, 2002