@@ -30,7 +30,7 @@
 &nbsp;[<a class=nav href="#links">Links</a>]&nbsp;
 *&nbsp;</div>
 <P class=Sub>Home of the <i>Electronic Logbook</i> package by <a href="mailto:Stefan.Ritt@psi.ch">Stefan Ritt</a></P>
-<div class=version>&nbsp; Current version is : 2.2.3 &nbsp;</div>
+<div class=version>&nbsp; Current version is : 2.2.4 &nbsp;</div>
 
 <hr><a name="whatis">
 <div class=section>&nbsp; What is ELOG ? &nbsp;</div>
