@@ -3,6 +3,9 @@ Version 2.2.5, released December xxth, 2002
 
 - Improved speed for sending many email notifications
 - Added "Omit email to" option
+- Added "Suppress Email to users" option
+- Email recipients can now use subsitution like $name
+- Added hierarchical logbooks
 
 Version 2.2.4, released December 12th, 2002
 ===========================================
